--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
-name: Chatops plan - Integration tests
+name: Test-comment
 on:
   pull_request_review_comment:
-    types: [created, deleted]
+    types: [created]
+  pull_request_review:
+    types: ["submitted", "edited", "dismissed"]
+  issue_comment:
+    types: ["created", "edited", "deleted"]
 
 jobs:
   approved:
