--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
-name: Test-comment-1
+name: Test-comment-2
 on:
-  pull_request_review_comment:
-    types: [created]
-  # pull_request_review:
-  #   types: ["submitted", "edited", "dismissed"]
+  # pull_request_review_comment:
+  #   types: [created]
+  pull_request_review:
+    types: ["submitted", "edited", "dismissed"]
   issue_comment:
     types: ["created", "edited", "deleted"]
 
